--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
@@ -13,21 +16,22 @@
   <body>
     <header class="navbar-section">
       <div>
-          <a  href="#hero-section" class="footer-logo">Best<span class="bike-logo">Bike</span></a>
+        <a href="#hero-section" class="footer-logo"
+          >Best<span class="bike-logo">Bike</span></a
+        >
       </div>
       <div class="hamburguer-container">
         <div class="hamburguer-line"></div>
       </div>
       <nav class="navbar">
         <ul class="navbar-list">
-          <li><a class="navbar-link" href="#hero-section">Home</a> </li>
-          <li><a class="navbar-link" href="#about-section">About</a> </li>
-          <li><a class="navbar-link" href="#category-section">Category</a> </li>
-          <li><a class="navbar-link" href="#services-section">Services</a> </li>
-          <li><a class="navbar-link" href="#subscribe-section">Contact</a> </li>
+          <li><a class="navbar-link" href="#hero-section">Home</a></li>
+          <li><a class="navbar-link" href="#about-section">About</a></li>
+          <li><a class="navbar-link" href="#category-section">Category</a></li>
+          <li><a class="navbar-link" href="#services-section">Services</a></li>
+          <li><a class="navbar-link" href="#subscribe-section">Contact</a></li>
         </ul>
-        </nav>
-
+      </nav>
     </header>
 
     <section class="hero-section" id="hero-section">
@@ -35,18 +39,21 @@
         <div class="hero-text">
           <h1 class="heading-primary">Find your ideal bike</h1>
           <p class="hero-description">
-Millions of people prefer our products.Do not miss this opportunity to find the bike of your dreams</p>
+            Millions of people prefer our products.Do not miss this opportunity
+            to find the bike of your dreams
+          </p>
           <a class="card-order-now" href="#services-section">BUY NOW</a>
-
         </div>
         <div class="hero-img">
-<img src="https://images.pexels.com/photos/93801/pexels-photo-93801.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+          <img
+            src="https://images.pexels.com/photos/93801/pexels-photo-93801.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+          />
         </div>
       </div>
     </section>
 
     <main>
-      <section class="description-section" >
+      <section class="description-section">
         <div class="container grid grid--description-container">
           <div class="description-1">
             <h3 class="heading-tertiary">free us delivery</h3>
@@ -63,43 +70,58 @@ Millions of people prefer our products.Do not miss this opportunity to find the 
         </div>
       </section>
 
-
-
       <section class="about-section" id="about-section">
         <div class="container grid grid--2-cols">
           <div class="about-img-container">
-            <img class="about-img" src="https://images.pexels.com/photos/9748608/pexels-photo-9748608.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="bicycle">
+            <img
+              class="about-img"
+              src="https://images.pexels.com/photos/9748608/pexels-photo-9748608.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt="bicycle"
+            />
           </div>
           <div class="about-text-container">
-
             <h3 class="heading-tertiary">About US</h3>
-            <h2 class="heading-secondary">We provide all range of new and old bicycle</h2>
-            <p> A bicycle-sharing system, public bicycle scheme or public bike share PBS scheme is a shared transport service in which bicycles are made available for shared use to individuals on a short term basis for a price or free. Many bike share systems allow people to borrow a Cycle.
-
-The earliest well-known community bicycle program was started in the summer of 1965 by Luud Schimmelpennink in association group.</p>
+            <h2 class="heading-secondary">
+              We provide all range of new and old bicycle
+            </h2>
+            <p>
+              A bicycle-sharing system, public bicycle scheme or public bike
+              share PBS scheme is a shared transport service in which bicycles
+              are made available for shared use to individuals on a short term
+              basis for a price or free. Many bike share systems allow people to
+              borrow a Cycle. The earliest well-known community bicycle program
+              was started in the summer of 1965 by Luud Schimmelpennink in
+              association group.
+            </p>
           </div>
         </div>
       </section>
 
-
       <section class="video-section">
-
         <div class="video">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/2D2BeqxfBgc?start=176" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/2D2BeqxfBgc?start=176"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
       </section>
-
 
       <section class="category-section" id="category-section">
         <div class="container">
-
-        <h3 class="heading-tertiary">Categories</h3>
-        <h2 class="heading-secondary">Browse By Category</h2>
+          <h3 class="heading-tertiary">Categories</h3>
+          <h2 class="heading-secondary">Browse By Category</h2>
         </div>
         <div class="container gap grid--3-cols">
           <div class="category-card">
             <a href="#">
-              <img  src="https://images.unsplash.com/photo-1576435728678-68d0fbf94e91?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1348&q=80">
+              <img
+                src="https://images.unsplash.com/photo-1576435728678-68d0fbf94e91?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1348&q=80"
+              />
             </a>
             <div class="category-card-subcontainer">
               <h4 class="heading-quaternary">New Cycle</h4>
@@ -107,9 +129,10 @@ The earliest well-known community bicycle program was started in the summer of 1
             </div>
           </div>
           <div class="category-card">
-
             <a href="#">
-              <img src="https://images.pexels.com/photos/1753137/pexels-photo-1753137.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+              <img
+                src="https://images.pexels.com/photos/1753137/pexels-photo-1753137.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              />
             </a>
             <div class="category-card-subcontainer">
               <h4 class="heading-quaternary">Cycle Rentals</h4>
@@ -117,9 +140,10 @@ The earliest well-known community bicycle program was started in the summer of 1
             </div>
           </div>
           <div class="category-card">
-
             <a href="#">
-              <img src="https://images.unsplash.com/photo-1572970008742-333d7d8d682c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
+              <img
+                src="https://images.unsplash.com/photo-1572970008742-333d7d8d682c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+              />
             </a>
             <div class="category-card-subcontainer">
               <h4 class="heading-quaternary">Exotic Cycle</h4>
@@ -127,9 +151,10 @@ The earliest well-known community bicycle program was started in the summer of 1
             </div>
           </div>
           <div class="category-card">
-
             <a href="#">
-              <img src="https://images.unsplash.com/photo-1659435827891-ebf72664abd7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1326&q=80">
+              <img
+                src="https://images.unsplash.com/photo-1659435827891-ebf72664abd7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1326&q=80"
+              />
             </a>
             <div class="category-card-subcontainer">
               <h4 class="heading-quaternary">Cycle Parts</h4>
@@ -137,9 +162,10 @@ The earliest well-known community bicycle program was started in the summer of 1
             </div>
           </div>
           <div class="category-card">
-
             <a href="#">
-              <img src="https://images.unsplash.com/photo-1612561634367-c224fbb2cabb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
+              <img
+                src="https://images.unsplash.com/photo-1612561634367-c224fbb2cabb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+              />
             </a>
 
             <div class="category-card-subcontainer">
@@ -148,9 +174,10 @@ The earliest well-known community bicycle program was started in the summer of 1
             </div>
           </div>
           <div class="category-card">
-
             <a href="#">
-              <img src="https://images.unsplash.com/photo-1516686491778-e8842063c23c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
+              <img
+                src="https://images.unsplash.com/photo-1516686491778-e8842063c23c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+              />
             </a>
             <div class="category-card-subcontainer">
               <h4 class="heading-quaternary">Old Cycles</h4>
@@ -160,37 +187,31 @@ The earliest well-known community bicycle program was started in the summer of 1
         </div>
       </section>
 
-
-
       <section class="services-section" id="services-section">
         <div class="container">
-
-        <h2 class="heading-secondary">PRICING PLANS</h2>
+          <h2 class="heading-secondary">PRICING PLANS</h2>
         </div>
-        <div class="container grid-services grid--3-services-section ">
-
+        <div class="container grid-services grid--3-services-section">
           <div class="services-card first-card">
-            <h4 class="card-title"> INDIVIDUAL</h4>
+            <h4 class="card-title">INDIVIDUAL</h4>
             <div class="price-container">
               <span class="price-card">$</span>
-            <p class="price-card-number">15</p>
+              <p class="price-card-number">15</p>
             </div>
-            <ul class='card-list'>
+            <ul class="card-list">
               <li>1 Member</li>
               <li>Daily Club Access</li>
               <li>Individual Coaching</li>
               <li>Biking Accesories</li>
             </ul>
-            <a  class='card-order-now' href="#">ORDER NOW</a>
-            </div>
-
+            <a class="card-order-now" href="#">ORDER NOW</a>
+          </div>
 
           <div class="services-card card-price-center second-card">
             <h4 class="card-title">FAMILY</h4>
             <div class="price-container">
-
-            <span class="price-card">$</span>
-          <p class="price-card-number">48</p>
+              <span class="price-card">$</span>
+              <p class="price-card-number">48</p>
             </div>
             <ul class="card-list">
               <li>3 Members</li>
@@ -198,18 +219,14 @@ The earliest well-known community bicycle program was started in the summer of 1
               <li>Free Bike Rentals</li>
               <li>Members Suppor</li>
             </ul>
-            <a  class='card-order-now' href="#">ORDER NOW</a>
+            <a class="card-order-now" href="#">ORDER NOW</a>
           </div>
 
-
-
           <div class="services-card third-card">
-
-          <h4 class="card-title">CORPORATE</h4>
+            <h4 class="card-title">CORPORATE</h4>
             <div class="price-container">
-
-            <span class="price-card">$</span>
-            <p class="price-card-number">70</p>
+              <span class="price-card">$</span>
+              <p class="price-card-number">70</p>
             </div>
             <ul class="card-list">
               <li>5 Members</li>
@@ -217,22 +234,24 @@ The earliest well-known community bicycle program was started in the summer of 1
               <li>Corporate Programs</li>
               <li>Bike Inspection</li>
             </ul>
-            <a  class='card-order-now' href="#">ORDER NOW</a>
+            <a class="card-order-now" href="#">ORDER NOW</a>
           </div>
         </div>
       </section>
-        
-
 
       <section class="subscribe-section" id="subscribe-section">
         <div class="subscribe-container">
-
-        <h2 class="heading-secondary white-color">Subscribe to Stay Informed</h2>        
-        <form class="subscribe-form">
-
-        <input class="subscribe-email" placeholder="Enter your email" type="email">
-          <button class="btn-form" type="submit">Subscribe</button>
-        </form>
+          <h2 class="heading-secondary white-color">
+            Subscribe to Stay Informed
+          </h2>
+          <form class="subscribe-form">
+            <input
+              class="subscribe-email"
+              placeholder="Enter your email"
+              type="email"
+            />
+            <button class="btn-form" type="submit">Subscribe</button>
+          </form>
         </div>
       </section>
 
@@ -241,58 +260,66 @@ The earliest well-known community bicycle program was started in the summer of 1
           <h1 class="footer-logo">Best<span class="bike-logo">Bike</span></h1>
           <div class="footer-nav">
             <ul>
-              <li><a href="#">About</a> </li>
-              <li><a href="#">Events</a> </li>
-              <li><a href="#">Gallery</a> </li>
-              <li><a href="#">News</a> </li>
-              <li><a href="#">Contact</a> </li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Gallery</a></li>
+              <li><a href="#">News</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
           </div>
 
           <div class="footer-icons">
-<a href="#" class="fa fa-facebook icon-circle"></a>
-<a href="#" class="fa fa-twitter icon-circle"></a>
-            <a href="#" class="fa fa-instagram icon-circle" aria-hidden="true"></a>
-<a href="#" class="fa fa-youtube-play icon-circle" aria-hidden="true"></a>
-            <a href="#" class="fa fa-pinterest-p icon-circle" aria-hidden="true"></a>
+            <a href="#" class="fa fa-facebook icon-circle"></a>
+            <a href="#" class="fa fa-twitter icon-circle"></a>
+            <a
+              href="#"
+              class="fa fa-instagram icon-circle"
+              aria-hidden="true"
+            ></a>
+            <a
+              href="#"
+              class="fa fa-youtube-play icon-circle"
+              aria-hidden="true"
+            ></a>
+            <a
+              href="#"
+              class="fa fa-pinterest-p icon-circle"
+              aria-hidden="true"
+            ></a>
           </div>
 
-          <p class="footer-copy">©  2022 BestBike. All Rights Reserved. Privacy Policy</p>
+          <p class="footer-copy">
+            © 2022 BestBike. All Rights Reserved. Privacy Policy
+          </p>
         </div>
-
       </footer>
     </main>
 
-
     <script>
-    const burguerContainer = document.querySelector('.hamburguer-container')
-    const navList = document.querySelector('.navbar-list')
-    const navLink = document.querySelectorAll('.navbar-link')
-    console.log(burguerContainer)
+      const burguerContainer = document.querySelector('.hamburguer-container');
+      const navList = document.querySelector('.navbar-list');
+      const navLink = document.querySelectorAll('.navbar-link');
+      console.log(burguerContainer);
 
       let isBurguerOpen = false;
-    if(!isBurguerOpen){
-      burguerContainer.addEventListener('click',()=>{
-        isBurguerOpen = true;
-        burguerContainer.classList.toggle('active')
-        navList.classList.toggle('open')
-      })
-    }else{
-      burguerContainer.classList.remove('active')
-      navList.classList.remove('open')
-      isBurguerOpen = false;
-    }
-
-    for(let i = 0; i<navLink.length; i++){
-      navLink[i].onclick = function(){
-        navList.classList.remove('open')
-        burguerContainer.classList.remove('active')
+      if (!isBurguerOpen) {
+        burguerContainer.addEventListener('click', () => {
+          isBurguerOpen = true;
+          burguerContainer.classList.toggle('active');
+          navList.classList.toggle('open');
+        });
+      } else {
+        burguerContainer.classList.remove('active');
+        navList.classList.remove('open');
+        isBurguerOpen = false;
       }
-    }
 
-  </script>
-
-
-
+      for (let i = 0; i < navLink.length; i++) {
+        navLink[i].onclick = function () {
+          navList.classList.remove('open');
+          burguerContainer.classList.remove('active');
+        };
+      }
+    </script>
   </body>
 </html>
